# dictionary-generator

./: Cargo.toml  README.md  dictgen.d.ts
src/: generator.rs  lib.rs  main.rs  string_utils.rs  wasm.rs
test/: test.rs
vscode-plugin/: language-configuration.json  package-lock.json  package.json
vscode-plugin/syntaxes/: dict_file.tmGrammar.json
