[package]
name = "dictgen"
version = "0.3.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
unicode-normalization = "0.1.25"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["serde"] }
unicode_categories = "0.1.1"

[dev-dependencies]
json = "0.12.4"
